log
s치., 12 de mar. de 2022 21:01:14: 
 tests:  0|7
total_score: 0/70
dc6fcc1
s치., 12 de mar. de 2022 21:53:12: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
00ad9ce
s치., 12 de mar. de 2022 21:56:40: 
 exercises.c | 32 ++++++++++++++++++++++++--------
 1 file changed, 24 insertions(+), 8 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:40:20: error: passing argument 1 of 'sumaN' makes pointer from integer without a cast [-Werror=int-conversion]
    int sum = sumaN(a[n-m], m);
                    ^
exercises.c:21:5: note: expected 'int *' but argument is of type 'int'
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1a52b8c
s치., 12 de mar. de 2022 21:58:26: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
413c93c
